update on tues am before making puublic

--- a/lab-2/ll-2-case-study.Rmd
+++ b/lab-2/ll-2-case-study.Rmd
@@ -364,12 +364,12 @@ x 2 table with values (cells in the table) representing one of four
 conditions, elaborated below. You'll fill in the last two columns in a
 few moments.
 
-|      Statistic      |       How to Find       |                                          Interpretation                                          | Value |  \%  |
-|:-------------------:|:-----------------------:|:------------------------------------------------------------------------------------------------:|:-----:|:----:|
-| True positive (TP)  | Truth: 1, Prediction: 1 |    Proportion of the population that is affected by a condition and correctly tested positive    | 2443  | 19.8 |
-| True negative (TN)  | Truth: 0, Prediction: 0 |  Proportion of the population that is not affected by a condition and correctly tested negative  | 4536  | 36.8 |
-| False positive (FP) | Truth: 0, Prediction: 1 | Proportion of the population that is not affected by a condition and incorrectly tested positive | 2070  | 16.8 |
-| False negative (FN) | Truth: 1, Prediction: 0 |  Proportion of the population that is affected by a condition and incorrectly tested positive.   | 3269  | 26.5 |
+|      Statistic      |       How to Find       |                                          Interpretation                                          | Value | \%  |
+|:-------------:|:-------------:|:-------------:|:-------------:|:-------------:|
+| True positive (TP)  | Truth: 1, Prediction: 1 |    Proportion of the population that is affected by a condition and correctly tested positive    |       |     |
+| True negative (TN)  | Truth: 0, Prediction: 0 |  Proportion of the population that is not affected by a condition and correctly tested negative  |       |     |
+| False positive (FP) | Truth: 0, Prediction: 1 | Proportion of the population that is not affected by a condition and incorrectly tested positive |       |     |
+| False negative (FN) | Truth: 1, Prediction: 0 |  Proportion of the population that is affected by a condition and incorrectly tested positive.   |       |     |
 
 To create a confusion matrix, run `collect_predictions()`, which does
 what it suggests - it gathers together the model's test set predictions.
@@ -400,7 +400,7 @@ test data set. The accuracy can be interpreted as the sum of the true
 positive and true negative percentages. So, what's the accuracy? Add
 that below as a percentage.
 
--   **Accuracy:** 56.6%
+-   **Accuracy:**
 
 ### Other measures of predictive accuracy
 
@@ -415,7 +415,7 @@ precision, and negative predictive value below to three decimal points.
 #### [Your Turn]{style="color: green;"} ⤵
 
 |                                               |                |                                                                                                                                |                                                                                    |                      |
-|:---------------------------------------------:|:--------------:|:------------------------------------------------------------------------------------------------------------------------------:|:----------------------------------------------------------------------------------:|:--------------------:|
+|:-------------:|:-------------:|:-------------:|:-------------:|:-------------:|
 |                 **Statistic**                 |  **Equation**  |                                                       **Interpretation**                                                       |                               **Question Answered**                                | **Statistic Values** |
 |         **Sensitivity** (AKA recall)          | TP / (TP + FN) |                       Proportion of those who are affected by a condition and correctly tested positive                        |        Out of all the actual positives, how many did we correctly predict?         |                      |
 |                **Specificity**                | TN / (FP + TN) |                     Proportion of those who are not affected by a condition and correctly tested negative;                     |        Out of all the actual negatives, how many did we correctly predict?         |                      |
@@ -429,33 +429,13 @@ a *substantive interpretation*. One is provided to get you started.
 #### [Your Turn]{style="color: green;"} ⤵
 
 |                                           |                                                                                                                                             |
-|-------------------------------------------|---------------------------------------------------------------------------------------------------------------------------------------------|
+|----------------------|--------------------------------------------------|
 | **Statistic**                             | **Substantive Interpretation**                                                                                                              |
 | Accuracy                                  |                                                                                                                                             |
 | Sensitivity (AKA recall)                  | The model correctly predicts about 2/3 of students who do not pass correctly (as not passing). This is pretty good, but it could be better. |
 | Specificity                               |                                                                                                                                             |
 | Precision (AKA Positive Predictive Value) |                                                                                                                                             |
 | Negative Predictive Value                 |                                                                                                                                             |
-+----------------+-----------------------------------------------------+
-| **Statistic**  | **Substantive Interpretation**                      |
-+----------------+-----------------------------------------------------+
-| Accuracy       |                                                     |
-+----------------+-----------------------------------------------------+
-| Sensitivity    | The model correctly predicts about 2/3 of students  |
-| (AKA recall)   | who do not pass correctly (as not passing). This is |
-|                | pretty good, but it could be better.                |
-+----------------+-----------------------------------------------------+
-| Specificity    |                                                     |
-+----------------+-----------------------------------------------------+
-| Precision (AKA |                                                     |
-| Positive       |                                                     |
-| Predictive     |                                                     |
-| Value)         |                                                     |
-+----------------+-----------------------------------------------------+
-| Negative       |                                                     |
-| Predictive     |                                                     |
-| Value          |                                                     |
-+----------------+-----------------------------------------------------+
 
 This process might suggest to you how a "good" model isn't necessarily
 one that is the most accurate, but instead is one that has good values
@@ -467,7 +447,7 @@ this; is it better suited to correctly identifying "positive" pass cases
 (sensitivity) or "negatively" identifying students who do not pass
 (specificity)?
 
--   YOUR RESPONSE HERE 
+-   YOUR RESPONSE HERE
 
 ## 5. COMMUNICATE
 
