--- a/lab-1/ll-1-case-study.Rmd
+++ b/lab-1/ll-1-case-study.Rmd
@@ -26,7 +26,8 @@ Each machine learning "case study" is designed to illustrate how machine
 learning methods and techniques can be applied to address a research
 question of interest, create useful data products, and conduct
 reproducible research. Each case study is structured around a basic
-analytics workflow modeled after the Data-Intensive Research Workflow from [Learning Analytics Goes to School](#0) (Krumm et al., 2018):
+analytics workflow modeled after the Data-Intensive Research Workflow
+from [Learning Analytics Goes to School](#0) (Krumm et al., 2018):
 
 ![](https://sbkellogg.github.io/eci-589/unit-1/img/workflow.png){alt=""
 width="80%"}
@@ -106,7 +107,7 @@ article.
 
 > Estrellado, R. A., Freer, E. A., Mostipak, J., Rosenberg, J. M., &
 > Velásquez, I. C. (2020). *Data science in education using R*.
-> Routledge (c14), Predicting students\' final grades using machine
+> Routledge (c14), Predicting students' final grades using machine
 > learning methods with online course data.
 > <http://www.datascienceineducation.com/>
 
@@ -365,7 +366,6 @@ Specifically, in Part 3 we will:
     based on a measure of socioeconomic resources--the index of multiple
     depravity variable.
 
-=======
 Write down a few observations after inspecting the data:
 
 -   YOUR RESPONSE HERE
@@ -482,9 +482,7 @@ predictive models. You can read more about feature engineering
 #### Student Socioeconomic Index
 
 For our first lab, we'll engage in a very basic feature engineering
-step, though we'll do this *much* more in the next learning lab.
-
-=======
+step, though we'll do this *much* more in the next learning lab
 
 #### Student Socioeconomic Index
 
@@ -564,8 +562,6 @@ al.,2020) remind us that:
 > Eventually, you might use the model on entirely new data.
 
 #### Training and Testing Sets
-
-=======
 
 > At its core, machine learning is the process of "showing" your
 > statistical model only some of the data at once and training the model
@@ -944,7 +940,8 @@ that can be taken to act upon your findings.
 
 For now, we will wrap up this case study by converting our work into a
 webpage that can be used to communicate your learning and demonstrate
-some of your new R skills. To do so, you will need to "knit" your document by clicking the button in the menu bar at the the top of this
+some of your new R skills. To do so, you will need to "knit" your
+document by clicking the button in the menu bar at the the top of this
 file. This will do two things; it will:
 
 1.  check through all your code for any errors; and,
@@ -958,8 +955,6 @@ file. This will do two things; it will:
 **Note:** Before knitting, make sure you change the `author:` name in
 the YAML header at the top of this document so you can take credit for
 your hard work!
-
-1.  
 
 ![](img/knit-publish.png){width="80%"}
 
