--- a/lab-1/ll-1-overview-presentation.Rmd
+++ b/lab-1/ll-1-overview-presentation.Rmd
@@ -81,7 +81,7 @@ We have some data and want to develop a prediction model. Supervised machine lea
 
 .panelset[
 
-.panel[.panel-name[Background p1]
+.panel[.panel-name[Review p1]
 
 
 # What technique should I choose?
@@ -94,21 +94,35 @@ Do you have coded data or data with a known outcome -- let's say about K-12 stud
 
 <bold><h4><center>Supervised methods may be your best bet</center></h4></bold>
 
-.panel[.panel-name[Background p2]
 ]
+
+.panel[.panel-name[Review p2]
 
 # What technique should I choose?
 
-Do you not yet have codes/outcomes -- and do you want to?
-
-- _Achieve a starting point_ for qualitative coding, perhaps in a ["computational grounded theory"](https://journals.sagepub.com/doi/full/10.1177/0049124117729703) mode?
-- _Discover groups or patterns in your data_ that may be of interest?
-- _Reduce the number of variables in your dataset_ to a smaller, but perhaps nearly as explanatory/predictive - set of variables?
-
-<bold><h4><center>Unsupervised methods may be helpful</center></h4></bold>
-
+- Requires coded data or data with a known outcome
+- Uses coded/outcome data to train an algorithm
+- Uses that algorithm to **predict the codes/outcomes for new data** (data not used during the training)
+- Can take the form of a *classification* (predicting a dichotomous or categorical outcome) or a *regression* (predicting a continuous outcome)
+- Algorithms include:
+  - [Linear and logistic regression](https://web.stanford.edu/~hastie/ElemStatLearn/)
+  - Random forest
+  - Neural network
 
 ]
+
+.panel[.panel-name[Review p3]
+
+**What kind of coded data?**
+
+In educational research:
+
+- Assessment data (e.g., [1](https://link.springer.com/article/10.1007/s10956-020-09895-9))
+- Data from log files ("trace data") (e.g., [1](https://www.tandfonline.com/doi/full/10.1080/10508406.2013.837391?casa_token=-8Fm2KCFJ30AAAAA%3Altbc8Y8ci_z-uLJx4se9tgvru9mzm3yqCTFi12ndJ5uM6RDl5YJGG6_4KpUgIK5BYa_Ildeh2qogoQ))
+- Open-ended written responses (e.g., [1](https://link.springer.com/article/10.1007/s10956-020-09889-7), [2](https://doi.org/10.1007/s11423-020-09761-w))
+- Achievement data (i.e., end-of-course grades) (e.g., [1](https://link.springer.com/article/10.1007/s10956-020-09888-8), [2](https://search.proquest.com/docview/2343734516?pq-origsite=gscholar&fromopenview=true))
+
+
 ]
 
 .panel[.panel-name[Getting Started]
@@ -147,8 +161,6 @@ participation in one of several Massive Open Online Courses (called
 
 .panel[.panel-name[OULAD]
 
-# Can we predict students' passing of OULAD courses?
-
 - Many students pass these courses, but not all do
 - We have data on students' initial characteristics and their interactions in the course
 - If we could develop a good prediction model, we could provide additional supports to students--and maybe move the needle on some students succeeding who might not otherwise
@@ -164,7 +176,7 @@ We'll be focusing on three files:
 
 These are joined together (see `oulad.R`) for this learning lab. You'll be doing more joining later!
 
-```{r}
+```{r, message = FALSE, echo=FALSE}
 students <- read_csv("data/oulad-students.csv")
 students %>% head(3)
 ```
@@ -172,10 +184,6 @@ students %>% head(3)
 ]
 
 .panel[.panel-name[LASER Frame]
-
-# Overview of classification modeling
-
-These align with the LASER Framework (used across topic areas):
 
 1.  **Prepare**: Prior to analysis, we'll take a look at the context
 from which our data came, formulate some questions, and load R packages.
@@ -201,7 +209,7 @@ transforming, and merging data.
 1. **Fit model** (Model)
 1. **Evaluate accuracy** (Communicate)  
 
-This is the basic process we'll follow for this and the next two learning labs focused on supervised ML
+**This is the foundational process we'll follow for this and the next two learning labs focused on supervised ML**
 
 ]
 ]
@@ -216,23 +224,7 @@ This is the basic process we'll follow for this and the next two learning labs f
 
 
 - Algorithms (or estimation procedures - or informally models) refer to the _structure_ and _process_ of estimating the _parameters_ of a model
-
 - This definition provides a wide range of options for what kinds of algorithms we use (from simple to very complex, as we discuss in a later learning lab)
-
-- For now, we focus on a familiar, easy to interpret algorithm (e.g., [1](https://dl.acm.org/doi/abs/10.1145/3448139.3448154?casa_token=skmk5XGbDOUAAAAA:Z0Kl4nyjpOGFA6RuFTiiLWaC_KxH1vkQ72Kr0hetXcumRdvu8tPYlCX12AgHr9aS0Fp3L-Uu0p4), also [this](https://linkinghub.elsevier.com/retrieve/pii/S0895435618310813)), _logistic regression_
-- This is a linear model with a binary (*"yes"* or *"no"*) outcome
-- It will be a _bad model_ to start us off!
-- We'll dive into a Random Forest in LL3, setting you up for more involved modeling efforts
-
-]
-
-.panel[.panel-name[Algorithms]
-
-
-- Algorithms (or estimation procedures - or informally models) refer to the _structure_ and _process_ of estimating the _parameters_ of a model
-
-- This definition provides a wide range of options for what kinds of algorithms we use (from simple to very complex, as we discuss in a later learning lab)
-
 - For now, we focus on a familiar, easy to interpret algorithm (e.g., [1](https://dl.acm.org/doi/abs/10.1145/3448139.3448154?casa_token=skmk5XGbDOUAAAAA:Z0Kl4nyjpOGFA6RuFTiiLWaC_KxH1vkQ72Kr0hetXcumRdvu8tPYlCX12AgHr9aS0Fp3L-Uu0p4), also [this](https://linkinghub.elsevier.com/retrieve/pii/S0895435618310813)), _logistic regression_
 - This is a linear model with a binary (*"yes"* or *"no"*) outcome
 - It will be a _bad model_ to start us off!
@@ -253,9 +245,6 @@ This is the basic process we'll follow for this and the next two learning labs f
 - Training data: Data we use to **fit** (or train, AKA estimate) a supervised machine learning **model** (AKA algorithm)
 - Testing data: Data we use to see how well our model did---not used to fit the model
 - By splitting out data into training and testing _sets_, we can obtain valid metrics for how good our model is at predicting
-
---
-
 - Increased bias, in the form of an over-fit model 
 
 ]
@@ -404,3 +393,15 @@ Estrellado, R. A., Freer, E. A., Mostipak, J., Rosenberg, J. M., & Velásquez, I
 ]
 ]
 
+---
+
+# *fin*
+
+We hope to see you in the ML topic area learning labs!
+
+- *Dr. Joshua Rosenberg* (jmrosenberg@utk.edu; https://joshuamrosenberg.com)
+- *Dr. Peng  He* (hepeng1@msu.edu)
+
+[These slides (Introductory Presentation)](https://laser-institute.github.io/machine-learning/introductory-presentation.html#1)
+
+[General troubleshooting tips for R and RStudio](https://docs.google.com/document/d/14Jc-KG3m5k1BvyKWqw7KmDD21IugU5nV5edfJkZyspY/edit)
