--- a/lab-3/ll-3-case-study.Rmd
+++ b/lab-3/ll-3-case-study.Rmd
@@ -83,28 +83,21 @@ before -- tidyverse, janitor, and tidymodels.
 
 Please install and add two additional packages: {ranger}, for one
 implementation of random forest modeling, and {vip}, for variable
-importance metrics.
+importance metrics. Load these with the library function
 
 ```{r}
-<<<<<<< HEAD
+
 
 ```
 
 Next, we'll load a new file --- one with *interactions* (or log-trace)
-data.
+data. Please find that in the `data` folder for this lab, read that in
+and assign it the name `interactions`.
 
-=======
-library(janitor)
-library(tidyverse)
-library(tidymodels)
-library(vip) # a new package we're adding for variable importance measures
-library(ranger) # this is needed for the random forest algorithm
+```{r}
+
 ```
 
-Next, we'll load a new file --- one with *interactions* (or log-trace)
-data.
-
->>>>>>> bd1f9a70dcd4505d0230db09b2684f47ffc233de
 We have to do the same processing we did in the second learning lab, to
 obtain cut-off dates. As a reminder, the purpose of this is to train the
 model on data from the first one-third of the class, with the reasoning
@@ -120,7 +113,6 @@ this learning lab, we are providing you with the already-filtered
 interactions data. *Note*: you can find the code used to carry out these
 steps in the Lab 3 folder in `process-interactions-data.R`.
 
-<<<<<<< HEAD
 Please load `oulad-interactions-filtered.csv` into R, assigning the
 resulting data frame the name `interactions`.
 
@@ -128,15 +120,8 @@ resulting data frame the name `interactions`.
 
 ```{r}
 
-=======
-Please load `oulad-interactions.csv` into R, assigning the resulting
-data frame the name `interactions`.
 
-#### [Your Turn]{style="color: green;"} ⤵
 
-```{r}
-interactions <- read_csv("data/oulad-interactions.csv")
->>>>>>> bd1f9a70dcd4505d0230db09b2684f47ffc233de
 ```
 
 In the OULAD documentation, this is called the VLE (virtual learning
