--- a/lab-4/ll-4-overview-presentation.Rmd
+++ b/lab-4/ll-4-overview-presentation.Rmd
@@ -54,7 +54,7 @@ xaringanExtra::use_panelset()
 
 # Purpose and Agenda
 
-The previous three learning labs involved the use of data with known outcome variables in the first three learning labs. Accordingly, we explored different aspects of supervised machine learning. What if we have data without something that we can consider to be a dependent variable? Unsupervised machine learning methods can be used in such cases. Herein, we use Latent Profile Analysis with quantified, transcribed audio data from mathematics classrooms. We interpret the output of Latent Profile Analysis from a Computational Grounded Theory approach.
+The previous three learning labs involved the use of data with known outcome variables in the first three learning labs. Accordingly, we explored different aspects of supervised machine learning. Unsupervised machine learning methods can be used in such cases. Herein, we use Latent Profile Analysis with quantified, transcribed audio data from mathematics classrooms. We interpret the output of Latent Profile Analysis from a Computational Grounded Theory approach.
 
 ## What we'll do in this presentation
 
@@ -182,7 +182,7 @@ the different affective or emotional sentiment it evidences
 
 ---
 
-# Key Concepts: Combining qualitative and machine learning
+# Key Concepts: Combining qual. and ML methods
 
 .panelset[
 
@@ -228,6 +228,7 @@ the different affective or emotional sentiment it evidences
     - Interpreting findings
     
 ]
+
 ]
 
 ---
@@ -268,7 +269,9 @@ pisaUSA15 %>%
     compare_solutions(statistics = c("AIC", "BIC"))
 ```
 
-.panel[.panel-name[Other functions]
+]
+
+.panel[.panel-name[Other]
 ```{r, eval = FALSE, echo = TRUE}
 get_estimates(m4)
 get_data(m4)
@@ -333,3 +336,16 @@ Optionally, Rosenberg et al. (2019)
 
 ]
 ]
+
+---
+
+# *fin*
+
+We hope to see you in the ML topic area learning labs!
+
+- *Dr. Joshua Rosenberg* (jmrosenberg@utk.edu; https://joshuamrosenberg.com)
+- *Dr. Peng  He* (hepeng1@msu.edu)
+
+[These slides (Introductory Presentation)](https://laser-institute.github.io/machine-learning/introductory-presentation.html#1)
+
+[General troubleshooting tips for R and RStudio](https://docs.google.com/document/d/14Jc-KG3m5k1BvyKWqw7KmDD21IugU5nV5edfJkZyspY/edit)
