--- a/lab-1/ll-1-case-study.Rmd
+++ b/lab-1/ll-1-case-study.Rmd
@@ -162,7 +162,7 @@ library(tidyverse)
 
 ```
 
-#### **tidymodels 📦**
+#### tidymodels
 
 [![](img/tidymodels.png){width="20%"}](https://www.tidymodels.org/)
 
@@ -308,7 +308,7 @@ the feature engineering stage).
 First, since we are interested in developing a model that can predict
 whether a student is at risk of dropping a course, and so we can
 intervene before that happens, we need an outcome variable that let's us
-know if they have withdrawn.
+know if they have passed.
 
 To create this variable, let's use the `mutate()` function to create a
 dichotomous variable for whether or not the student withdrew from the
@@ -317,9 +317,9 @@ course. Here's a way we can do this, using `if_else()` and
 variable.
 
 ```{r}
-students <- students %>% tr
-    mutate(withdrawn = ifelse(final_result == "Withdrawn", 1, 0)) %>% # creates a new variable named "withdrawn" and a dummy code of 1 if value of final_result equals "Withdrawn" and 0 if not
-    mutate(withdrawn = as.factor(withdrawn)) # makes the variable a factor, helping later steps
+students <- students %>%
+    mutate(pass = ifelse(final_result == "Pass", 1, 0)) %>% # creates a new variable named "pass" and a dummy code of 1 if value of final_result equals "pass" and 0 if not
+    mutate(pass = as.factor(pass)) # makes the variable a factor, helping later steps
 ```
 
 **Note**: The [`mutate()`
@@ -349,22 +349,6 @@ if our new variable has indeed been added to our data frame.
 ```{r, eval=FALSE}
 
 ```
-
-## 3. EXPLORE
-
-As noted by Krumm et al. (2018), exploratory data analysis often
-involves some combination of data visualization and *feature
-engineering*. In Part 3, we will create a quick visualization to help us
-spot any potential issues with our data and engineer new predictive
-variables or "features" that we will use in our predictive models.
-Specifically, in Part 3 we will:
-
-1.  **Examine Outcomes** by taking a quick `count()` of the number of
-    students and the number of specific offerings of each course module.
-
-2.  **Engineer Predictors** by creating one more predictor variable
-    based on a measure of socioeconomic resources--the index of multiple
-    depravity variable.
 
 Write down a few observations after inspecting the data:
 
@@ -372,29 +356,6 @@ Write down a few observations after inspecting the data:
 -   YOUR RESPONSE HERE
 -   YOUR RESPONSE HERE
 
-### 2b. "Mutate" Variables
-
-We're going to do a few more steps related to data wrangling here,
-noting we could also do these at later stages of our process (namely, in
-the feature engineering stage).
-
-First, since we are interested in developing a model that can predict
-whether a student is at risk of dropping a course, and so we can
-intervene before that happens, we need an outcome variable that let's us
-know if they have withdrawn.
-
-To create this variable, let's use the `mutate()` function to create a
-dichotomous variable for whether or not the student withdrew from the
-course. Here's a way we can do this, using `if_else()` and
-`as.factor()`. This will be our *outcome* variable, or the predicted
-variable.
-
-```{r}
-students <- students %>% tr
-    mutate(withdrawn = ifelse(final_result == "Withdrawn", 1, 0)) %>% # creates a new variable named "withdrawn" and a dummy code of 1 if value of final_result equals "Withdrawn" and 0 if not
-    mutate(withdrawn = as.factor(withdrawn)) # makes the variable a factor, helping later steps
-```
-
 **Note**: The [`mutate()`
 function](https://dplyr.tidyverse.org/reference/mutate.html#:~:text=mutate()%20creates%20new%20columns,setting%20their%20value%20to%20NULL%20).)
 is a critical function to learn and is used to create new columns that
@@ -412,15 +373,6 @@ variable.
 ```{r}
 students <- students %>% 
     mutate(disability = as.factor(disability))
-```
-
-#### **👉 Your Turn** **⤵**
-
-In the chunk below, use the `view()` function to manually check and see
-if our new variable has indeed been added to our data frame.
-
-```{r, eval=FALSE}
-view(students)
 ```
 
 ## 3. EXPLORE
@@ -478,11 +430,6 @@ Though not often discussed, feature engineering is an important element
 of data-intensive research that can generate new insights and improve
 predictive models. You can read more about feature engineering
 [here](https://www.tmwr.org/recipes.html).
-
-#### Student Socioeconomic Index
-
-For our first lab, we'll engage in a very basic feature engineering
-step, though we'll do this *much* more in the next learning lab
 
 #### Student Socioeconomic Index
 
@@ -551,17 +498,6 @@ Specifically, in Part 4 we will learn how to:
 
 The authors of Data Science in Education Using R (Estrellado et
 al.,2020) remind us that:
-
-> At its core, machine learning is the process of "showing" your
-> statistical model only some of the data at once and training the model
-> to predict accurately on that training dataset (this is the "learning"
-> part of machine learning). Then, the model as developed on the
-> training data is shown new data - data you had all along, but hid from
-> your computer initially - and you see how well the model that you
-> developed on the training data performs on this new testing data.
-> Eventually, you might use the model on entirely new data.
-
-#### Training and Testing Sets
 
 > At its core, machine learning is the process of "showing" your
 > statistical model only some of the data at once and training the model
@@ -681,12 +617,12 @@ as we used it here has two arguments:
     the data itself; it is only used to catalog the names of the
     variables and their types, like factors, integers, dates, etc.
 
-Let's create a recipe where we predict `withdrawn` (the outcome
+Let's create a recipe where we predict `pass` (the outcome
 variable) on the basis of the `disability` and `imd_band` (predictor)
 variables.
 
 ```{r}
-my_rec <- recipe(withdrawn ~ disability + imd_band, data = data_train)
+my_rec <- recipe(pass ~ disability + imd_band, data = data_train)
 
 my_rec
 ```
@@ -830,7 +766,7 @@ final_fit %>%
 This is our first set of real output! Note two things:
 
 1.  `.pres_class`: This is the *predicted* code\
-2.  `withdrawn`: This is the known *code*
+2.  `pass`: This is the known *code*
 
 When these are **the same**, the model predicted the code *correctly*;
 when they aren't the same, the model was incorrect.
@@ -842,8 +778,8 @@ following chunk of code:
 ```{r}
 final_fit %>% 
     collect_predictions() %>% # see test set predictions
-    select(.pred_class, withdrawn) %>% # just to make the output easier to view 
-    mutate(correct = .pred_class == withdrawn) # create a new variable, correct, telling us when the model was and was not correct
+    select(.pred_class, pass) %>% # just to make the output easier to view 
+    mutate(correct = .pred_class == opass) # create a new variable, correct, telling us when the model was and was not correct
 ```
 
 You may notice some of the rows may be missing values. This is because
@@ -857,8 +793,8 @@ values of `correct`:
 ```{r}
 final_fit %>% 
     collect_predictions() %>% # see test set predictions
-    select(.pred_class, withdrawn) %>% # just to make the output easier to view 
-    mutate(correct = .pred_class == withdrawn) %>% # create a new variable, correct, telling us when the model was and was not correct
+    select(.pred_class, pass) %>% # just to make the output easier to view 
+    mutate(correct = .pred_class == pass) %>% # create a new variable, correct, telling us when the model was and was not correct
     tabyl(correct)
 ```
 
@@ -880,20 +816,20 @@ final_fit %>%
 
 How accurate was our predictive model? Consider how well our model would
 have done by chance alone -- what would the accuracy be in that case
-(with the model predicting withdrawn one-half of the time)?
+(with the model predicting pass one-half of the time)?
 
 ```{r}
 students %>% 
-    count(withdrawn)
+    count(pass)
 
 students %>% 
     mutate(prediction = sample(c(0, 1), nrow(students), replace = TRUE)) %>% 
-    mutate(correct = if_else(prediction == 1 & withdrawn == 1 |
-               prediction == 0 & withdrawn == 0, 1, 0)) %>% 
+    mutate(correct = if_else(prediction == 1 & pass == 1 |
+               prediction == 0 & pass == 0, 1, 0)) %>% 
     tabyl(correct)
 ```
 
-Curiously, randomly picking a 0 (did not withdraw) or a 1 (withdrawn)
+Curiously, randomly picking a 0 (did not pass) or a 1 (passed)
 will *always* lead to around a 50% accuracy, regardless of how many
 observations are actually associated with a 0 or a 1.
 
