--- a/lab-2/ll-2-overview-presentation.Rmd
+++ b/lab-2/ll-2-overview-presentation.Rmd
@@ -162,15 +162,15 @@ data_for_conf_mat %>%
 
 .panel[.panel-name[Conf Mat]
 
-**Accuracy**: Proportion of the population that is true positive or true negative
+**Accuracy**: Prop. of the sample that is true positive or true negative
 
-**True positive (TP)**: Proportion of the population that is affected by a condition and correctly tested positive
+**True positive (TP)**: Prop. of the sample that is affected by a condition and correctly tested positive
 
-**True negative (TN)**: Proportion of the population that is not affected by a condition and correctly tested negative
+**True negative (TN)**: Prop. of the sample that is not affected by a condition and correctly tested negative
 
-**False positive (FP)**: Proportion of the population that is not affected by a condition and incorrectly tested positive
+**False positive (FP)**: Prop. of the sample that is not affected by a condition and incorrectly tested positive
 
-**False negative (FN)**: Proportion of the population that is affected by a condition and incorrectly tested positive.
+**False negative (FN)**: Prop. of the sample that is affected by a condition and incorrectly tested positive.
 
 ]
 
@@ -212,17 +212,6 @@ d %>% head(3)
 
 ]
 
-.panel[.panel-name[Why?]
-
-```{r, out.width="30%"}
-d %>% 
-    ggplot(aes(x = time_point, y = var_a)) +
-    geom_point()
-```
-
-]
-
-
 .panel[.panel-name[How?]
 
 - We can do all of these things **manually**
@@ -257,11 +246,10 @@ library(tidyverse)
 library(tidymodels)
 
 starwars_recoded <- starwars %>% # built-in data available just by typing
-    mutate(species_human = ifelse(species == "Human", 1, 0), # recoding species to create a 0-1 outcome 
-           species_human = as.factor(species_human)) # changing to a factor
+    mutate(species_human = ifelse(species == "Human", "human", "not human"))
 
 starwars_recoded %>% 
-    count(species) # how many humans are there?
+    count(species_human) # how many humans are there?
 ```
 
 ]
@@ -271,10 +259,9 @@ starwars_recoded %>%
 **Split data**
 
 ```{r, echo = TRUE, eval = FALSE}
-train_test_split <- initial_split(starwars_recoded, prop = .80)
+train_test_split <- initial_split(starwars_recoded, prop = .70)
 
 data_train <- training(train_test_split)
-data_test <- testing(train_test_split)
 ```
 
 ]
@@ -285,7 +272,8 @@ data_test <- testing(train_test_split)
 
 ```{r, echo = TRUE, eval = FALSE}
 # predicting humans based on the variables we used in LL1 + birth_year and homeworld
-my_rec <- recipe(species_human ~ height + mass + birth_year + eye_color, data = data_train)
+my_rec <- recipe(species_human ~ height + mass + birth_year + eye_color, data = data_train) %>% 
+    step_dummy(eye_color) # need to dummy code
 ```
 
 ]
@@ -303,8 +291,7 @@ my_mod <-
 my_wf <-
     workflow() %>%
     add_model(my_mod) %>% 
-    add_recipe(my_rec) %>% 
-    step_dummy(eye_color) # need to dummy code
+    add_recipe(my_rec)
 ```
 
 ]
