update little typo from meeting with Enyu, Alfredo, and Jen

--- a/lab-2/ll-2-overview-presentation.Rmd
+++ b/lab-2/ll-2-overview-presentation.Rmd
@@ -303,7 +303,7 @@ my_wf <-
 ```{r, echo = TRUE, eval = FALSE}
 fitted_model <- fit(my_wf, data = data_train) # ignore warning for this example
 class_metrics <- metric_set(accuracy, sensitivity, specificity, ppv, npv, kap) # this is new
-final_fit <- last_fit(fitted_model, train_test_split)
+final_fit <- last_fit(fitted_model, train_test_split, metrics = class_metrics)
 ```
 
 ]
