minor edits to learning labs

--- a/lab-1/ll-1-overview-presentation.Rmd
+++ b/lab-1/ll-1-overview-presentation.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Machine Learning Learning Lab 1 Overview: Prediction"
+title: "Machine Learning Learning Lab 1: Prediction"
 subtitle: "Overview Presentation"
 author: "**Dr. Joshua Rosenberg**"
 institute: "LASER Institute"
